--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,24 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona 
+            titulo="Grafica 1"
+            [labels]="labels1"
+            [data]="data1"
+            [colors]="color1">
+        </app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona titulo="Grafica 2"></app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona titulo="Grafica 3"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona titulo="Grafica 4"></app-dona>
+    </div>
+</div>
