--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,54 @@
-<p>progress works!</p>
+<!-- ============================================================== -->
+<!-- Start Page Content -->
+<!-- ============================================================== -->
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Striped Progress bar</h4>
+                
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-primary progress-bar-striped active" 
+                        aria-valuenow="85" aria-valuemin="0" 
+                        aria-valuemax="100" 
+                        style="height:10px;"
+                        role="progressbar"
+                        [style.width]="getPorcentaje1">
+                    </div>
+                </div>
+
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-info progress-bar-striped active" 
+                        aria-valuenow="85" aria-valuemin="0" 
+                        aria-valuemax="100" 
+                        style="height:10px;"
+                        role="progressbar"
+                        [style.width]="getPorcentaje2"> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+               <app-incrementador [valorEntrada]="porcentaje1" (valorSalida)="porcentaje1 = $event"></app-incrementador>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador 
+                    [valorEntrada]="porcentaje2" 
+                    (valorSalida)="porcentaje2 = $event"
+                    [btnClass]="'btn-info'">
+                </app-incrementador>
+            </div>
+        </div>
+    </div>
+</div>
